Update raylib clone command to use GITHUB_TOKEN

--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -19,7 +19,7 @@ jobs:
 
       - name: Clone raylib
         run: |
-          git clone https://github.com/rAYLib/raylib.git
+          git clone https://hexaredecimal:${{ secrets.GITHUB_TOKEN }}@github.com/raylib/raylib.git
           cd raylib
           mkdir build
           cd build
