--- a/.github/workflows/c-cpp.yml
+++ b/.github/workflows/c-cpp.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Set up build environment
         run: |
           sudo apt update
-          sudo apt install -y git cmake gcc g++ libglfw3-dev libgl1-mesa-dev libxi-dev libxrandr-dev libxinerama-dev
+          sudo apt install -y git cmake gcc g++ libglfw3-dev libgl1-mesa-dev libxi-dev libxrandr-dev libxinerama-dev libxcursor-dev
 
       - name: Clone raylib
         run: |
